# Assignment1

./: .gitignore  README.md  main.py  pyproject.toml  validation_data.py
Architecture/: ArchDiagram1.py
my_page/: page1.py  page2.py  page3.py  page4.py  visualization.py
utils/: database.py  file_helper.py  openai_helper.py
