[tool.poetry]
name = "assignment-1"
version = "0.1.0"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
azure-storage-blob = "^12.23.0"
streamlit-option-menu = "^0.3.13"
openai = "^1.47.0"
requests = "^2.32.3"
pymssql = "^2.3.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
datasets = "^3.0.0"
plotly = "^5.24.1"
streamlit-plotly-events = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


